--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 																			<div class="item-div1">
 																			<nav>
 																			  <ul>
-																				<li><a href="menu.html">ewrdtgfzhg</a></li>
-																				<li><a href="journal.html">srfddf</a></li>
-																				<li class="superli"><a href="#">dfdf</a></li>
+																				<li><a href="menu.html">home</a></li>
+																				<li><a href="journal.html">menu</a></li>
+																				<li class="superli"><a href="#">about</a></li>
 																				
 																			  </ul>
 																			</nav>
